--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "Extracts lua documentation from C-style comments",
   "main": "dist/src/index.js",
+  "homepage": "https://github.com/rhys-vdw/lua-doc-extractor",
+  "repository": "https://github.com/rhys-vdw/lua-doc-extractor.git",
   "bin": {
     "lua-doc-extractor": "dist/src/cli.js"
   },
