--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "start": "tsx src/index.ts",
+    "prepare": "npm run build",
     "build": "tsc --build",
     "clean": "tsc --build --clean"
   },
