--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   "author": "Rhys van der Waerden",
   "license": "MIT",
   "dependencies": {
-    "@types/command-line-args": "^5.2.3",
-    "@types/lodash": "^4.17.13",
     "command-line-args": "^6.0.1",
     "command-line-usage": "^7.0.3",
     "lodash": "^4.17.21",
-    "parse-comments": "^1.0.0",
-    "tsx": "^4.19.2"
+    "parse-comments": "^1.0.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^16.1.3",
+    "@types/command-line-args": "^5.2.3",
     "@types/command-line-usage": "^5.0.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
