--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "dist/src/index.js",
   "homepage": "https://github.com/rhys-vdw/lua-doc-extractor",
   "repository": "https://github.com/rhys-vdw/lua-doc-extractor.git",
+  "files": [
+    "dist",
+    "!dist/tsconfig.tsbuildinfo"
+  ],
   "bin": {
     "lua-doc-extractor": "dist/src/cli.js"
   },
