--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Extracts lua documentation from C-style comments",
   "main": "dist/src/index.js",
   "homepage": "https://github.com/rhys-vdw/lua-doc-extractor",
-  "repository": "https://github.com/rhys-vdw/lua-doc-extractor.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rhys-vdw/lua-doc-extractor.git"
+  },
   "files": [
     "dist",
     "!dist/tsconfig.tsbuildinfo"
