--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "files": [
     "dist",
-    "!dist/tsconfig.tsbuildinfo"
+    "!dist/tsconfig.tsbuildinfo",
+    "!dist/src/test/**/*"
   ],
   "bin": {
     "lua-doc-extractor": "dist/src/cli.js"
@@ -19,7 +20,8 @@
     "start": "tsx src/index.ts",
     "prepare": "npm run build",
     "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "test": "tape -r ./src/test/utility/register-tsx.js src/test/**/*.test.ts | tap-diff"
   },
   "author": "Rhys van der Waerden",
   "license": "MIT",
@@ -30,11 +32,15 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@detools/tap-diff": "^0.2.2",
     "@tsconfig/node16": "^16.1.3",
     "@types/command-line-args": "^5.2.3",
     "@types/command-line-usage": "^5.0.4",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
+    "@types/tape": "^5.8.1",
+    "dedent-js": "^1.0.1",
+    "tape": "^5.9.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
