First pass on comment grammar

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc --build",
     "clean": "tsc --build --clean",
     "test": "tape -r ./src/test/utility/register-tsx.js src/test/**/*.test.ts | tap-diff",
-    "grammar": "nearleyc src/grammar.ne -o src/grammar.ts"
+    "grammar": "nearleyc src/grammar.ne -o src/grammar.ne.ts"
   },
   "author": "Rhys van der Waerden",
   "license": "MIT",
