--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "tsx src/index.ts",
     "prepare": "npm run build",
-    "build": "tsc --build",
+    "build": "npm run grammar && tsc --build",
     "clean": "tsc --build --clean",
     "test": "tape -r ./src/test/utility/register-tsx.js src/test/**/*.test.ts | tap-diff",
     "grammar": "nearleyc src/grammar.ne -o src/grammar.ne.ts"
