--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "Node16",
     "module": "Node16",
     "outDir": "dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "declaration": true
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts", "bin/*.ts"]
