--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "tsx src/index.ts",
     "prepare": "npm run build",
-    "build": "npm run grammar && tsc --build",
+    "build": "rm -rf dist && npm run grammar && tsc --build",
     "clean": "tsc --build --clean",
     "test-raw": "npm run grammar && tape -r ./src/test/utility/register-tsx.js src/test/**/*.test.ts",
     "test": "npm run test-raw | tap-diff",
