--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepare": "npm run build",
     "build": "rm -rf dist && npm run grammar && tsc --build",
     "clean": "tsc --build --clean",
-    "test-raw": "npm run grammar && tape -r ./src/test/utility/register-tsx.js src/test/**/*.test.ts",
+    "test-clean": "rm -r src/test/output/",
+    "test-raw": "npm run test-clean && npm run grammar && tape -r ./src/test/utility/register-tsx.js src/test/**/*.test.ts",
     "test": "npm run test-raw | tap-diff",
     "grammar": "nearleyc src/grammar.ne -o src/grammar.ne.ts"
   },
