Remove non existing bin folder from tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "declaration": true
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.ts", "bin/*.ts"]
+  "include": ["src/**/*.ts"]
 }
