--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lua-doc-extractor": "dist/src/cli.js"
   },
   "scripts": {
+    "cli": "tsx src/cli.ts",
     "start": "tsx src/index.ts",
     "prepare": "npm run build",
     "build": "rm -rf dist && npm run grammar && tsc --build",
